--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.8.2",
+    "@react-navigation/material-top-tabs": "^5.2.10",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "react": "16.11.0",
@@ -24,10 +25,13 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.27.1",
+    "react-native-material-menu": "^1.1.3",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.6",
     "react-native-screens": "^2.9.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation-header-buttons": "^4.0.2",
     "react-redux": "^7.2.0",
