--- a/package.json
+++ b/package.json
@@ -11,35 +11,28 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.8.2",
-    "@react-navigation/material-top-tabs": "^5.2.10",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-eject": "^0.1.2",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.27.1",
-    "react-native-material-menu": "^1.1.3",
-    "react-native-modal": "^11.5.6",
+    "react-native-month-year-picker": "^1.2.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.6",
     "react-native-screens": "^2.9.0",
-    "react-native-splash-screen": "^3.2.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation-header-buttons": "^4.0.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "reduxsauce": "^1.1.3",
-    "rn-sliding-up-panel": "^2.4.2"
+    "reduxsauce": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
